--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "bootstrap": "^4.5.3",
         "bootstrap-vue": "^2.23.0",
         "core-js": "^3.3.2",
-        "extract-text-webpack-plugin": "^3.0.2",
         "imagesloaded": "^4.1.4",
         "isotope-layout": "^3.0.6",
         "popper.js": "^1.14.7",
@@ -32,15 +31,16 @@
         "vuex": "^3.0.1"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^4.0.0",
-        "@vue/cli-plugin-router": "^4.0.0",
-        "@vue/cli-plugin-vuex": "^4.0.0",
-        "@vue/cli-service": "^4.0.0",
-        "copy-webpack-plugin": "^5.0.2",
-        "node-sass": "^4.12.0",
-        "sass-loader": "^8.0.0",
-        "vue-loader": "^15.7.0",
-        "vue-template-compiler": "^2.6.10"
+        "@vue/cli-plugin-babel": "^5.0.8",
+        "@vue/cli-plugin-router": "^5.0.8",
+        "mini-css-extract-plugin": "^2.7.7", 
+        "@vue/cli-plugin-vuex": "^5.0.8",
+        "@vue/cli-service": "^5.0.8",
+        "copy-webpack-plugin": "^12.0.2",
+        "sass": "^1.70.0",
+        "sass-loader": "^14.0.0",
+        "vue-loader": "^17.4.2",
+        "vue-template-compiler": "^2.6.14"
     },
     "postcss": {
         "plugins": {
